# skills

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  ORIGINS.md  README.md  apply  render_notes.py  run_harness.py  test_summary_matrix.md
examples/: CONTEXT.template.md  developer-profile.full.example.md
notes/: diffamp_note.md  diffamp_note_rendered.md
notes/compiled_circuits/: circuit_0.py
sandbox/Part_A_code-yagni_cicd/: .pre-commit-config.yaml  SPEC.md  pyproject.toml
sandbox/Part_A_hackathon-idea-generator_cicd/: .pre-commit-config.yaml  SPEC.md
sandbox/Part_A_spec-builder_cicd/: .pre-commit-config.yaml  SPEC.md  pyproject.toml
sandbox/Part_B_code-yagni_rules_cicd/: .pre-commit-config.yaml  SPEC.md
sandbox/Part_B_spec-builder_rules_cicd/: .pre-commit-config.yaml  SPEC.md
sandbox/Part_B_token-compressor_rules_cicd/: .pre-commit-config.yaml  SPEC.md  pyproject.toml
sandbox/Part_B_token-compressor_rules_cicd/.github/workflows/: ci.yml
sandbox/Part_B_token-compressor_rules_cicd/src/: gpg_verify.py
sandbox/Part_B_token-compressor_rules_cicd/src/token_compressor/: __init__.py  cli.py  compressor.py
sandbox/Part_B_token-compressor_rules_cicd/tests/: test_compressor.py  test_gpg_verify.py
sandbox/Part_C_C4_cicd/: .pre-commit-config.yaml  SPEC.md
sandbox/Part_C_C5_cicd/: .pre-commit-config.yaml  SPEC.md
skills/architectural-planning/: SKILL.md
skills/code-simplification/: SKILL.md
skills/code-yagni/: SKILL.md
skills/continuous-improvement/: SKILL.md
skills/developer-context-profile/: SKILL.md
skills/developer-profile/: SKILL.md
(+47 files in other folders)
