[project]
name = "token-compressor"
version = "0.1.0"
description = "Token compressor with GPG commit signature checker"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
